# PARA-PropertySolutions

./: .gitignore  Account.py  Cont_UserProfile.py  Cont_UserProfile_2.py  Dashboard_Page.py  Property_Button_Controller.py  Property_main.py  README.md  System.py  System_UML.txt  UserProfile.py  User_Profile.py  User_Profile.ui  classes.dot  images.qrc  main_gui.py  packages.dot  poetry_tutorial.txt  pyproject.toml  rc_allicons.py  src.Dashboard_Page.html  temp.py  test_property_controller.py  venv_tutorial.txt
Contractor_Page_GUI/: Contractor_Page.py
Documentation_1.0.0/: Bill.html  Cont_Bill.html  Cont_Contractor.html  Cont_Login.html  Cont_Property.html  Cont_Tenant.html  Cont_UserProfile.html  Contractor.html  System.html  src.Database.Database.html  src.Database.html  src.Entities.Account.html  src.Entities.Property.html  src.Entities.Tenant.html  src.Entities.html  src.Login_Page.html  src.gui.Contractor_Page_GUI.Contractor_Page.html  src.gui.Contractor_Page_GUI.html  src.gui.Dashboard.html  src.gui.Dashboard.pyqt_dashboard.html  src.gui.Dashboard.rc_allicons.html  src.gui.Dashboard.rc_images.html  src.gui.Login_Page_GUI.Signup_Page.html  src.gui.Login_Page_GUI.html  src.gui.Login_Page_GUI.image_login.html  src.gui.Login_Page_GUI.pyqt_Login_Page.html  src.gui.Notification_GUI.Noti_Page_GUI.html  src.gui.Notification_GUI.html  src.gui.Property_GUI.Property_Button_Controller.html  src.gui.Property_GUI.Property_Info_Page.html  src.gui.Property_GUI.Property_main.html  src.gui.Property_GUI.html  src.gui.Setting_GUI.Setting_Page_GUI.html  src.gui.Setting_GUI.html  (+9 more)
(+122 files in other folders)
