[tool.poetry]
name = "para"
version = "0.1.0"
description = "Property Management Software by PARA Property Solutions"
authors = ["PARA"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12.0,<3.13"
PyQt6 = "=6.6.1"
PyQt6-Qt6 = "=6.6.3"
PySide6 = "=6.6.3.1"
pytest = "^8.1.0"
matplotlib = "=3.8.2"

[tool.poetry.scripts]
test = 'tests:test'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"